fix: add white space

--- a/personal_page/css/styles.scss
+++ b/personal_page/css/styles.scss
@@ -76,7 +76,9 @@ main {
     }
     .description {
       text-align: justify;
-      margin: 1.2em;
+      margin-left: 1.2em;
+      margin-right: 1.2em;
+      margin-bottom: 1.2em;
     }
   }
 }
